# overlaat

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  schema.sql
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  COST-SCHEDULER.md  OBSERVABILITY.md  README.md
examples/: litellm-config.example.yaml  overlaat.env.example  run-queue-proxy.sh  run-usage-api.sh
overlaat/: __init__.py  breaker.py  db.py  host_logger.py  metrics_db.py  queue_proxy.py  scheduler.py  usage_api.py
tests/: conftest.py  test_breaker.py  test_db_sqlite.py  test_metrics_helpers.py  test_metrics_views.py  test_queue_behavior.py  test_queue_proxy_api.py  test_queue_proxy_helpers.py  test_scheduler.py  test_usage_api.py
