[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overlaat"
version = "0.0.1"
description = "Fair waiting-queue + honest usage accounting for a Mac Studio shared as a small, trusted team's personal LLM compute server — a sidecar in front of a multi-backend LiteLLM gateway."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Thijs Damsma" },
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pyyaml",
    "psycopg[binary]",
]

[project.urls]
Homepage = "https://github.com/tdamsma/overlaat"

[tool.hatch.build.targets.wheel]
packages = ["overlaat"]
